--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 body {
-    background-color: #469a26;
+    background-color: white;
     padding: 0;
     margin: 0;
     position: relative;
 }
 
 .road {
-    width: 500px;
+    width: 400px;
     height: 100vh;
-    background-color: #636161;
+
+    background-color: gray;
     margin: 0 auto;
     position: relative;
     overflow: hidden;
